--- a/ekg.1.man
+++ b/ekg.1.man
@@ -1,16 +1,10 @@
-.TH EKG 1 "31 october 2001" 
+.TH EKG n "31 october 2001" 
 .SH NAME
 ekg \- A Gadu-Gadu compatible client.
 .SH SYNTAX
-.B ekg 
-[
-.BI \-d
-] [
-.BI \-n 
-] [
-.BI \-u 
-.IR username
-]
+.B ekg [
+.BI options
+.B ]
 
 .SH SUMMARY
 .B ekg
@@ -18,14 +12,29 @@ This is experimental Gadu-Gadu client.
 
 .SH OPTIONS
 .TP
-.BI \-d 
+.BI \-d\ [\-\-debug]
 Enables "debug" mode - this is special verbose mode.
 .TP
-.BI \-n 
-Don't connect automagically. After starting program won't automatically
-connect to the gg servers.
+.BI \-n\ [\-\-no-auto]
+Don't connect automagically. After starting program won't automatically 
+connect to the gg servers. 
 .TP
-.BI \-u "\ " username
-Starts ekg with other \"user\".
-By default config files are stored in ~/.gg; this option gives
+.BI \-u "\ " username\ [\-\-user\ username]
+Starts ekg with other \"user\". 
+By default config files are stored in ~/.gg; this option gives 
 ability to create subdirectories structure with other setups.
+.TP
+.BI \-t\ theme\ [\-\-theme\ theme]
+loads theme from specified file
+.TP
+.BI \-a\ [\-\-away]
+after connect goes away
+.TP
+.BI \-b\ [\-\-back]
+after connect goes back
+.TP
+.BI \-i\ [\-\-invisible]
+after connect goes invisible
+.TP
+.BI \-p\ [\-\-private]
+after connect changes to private
